# cpp-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  Common.h  Main.cpp  Predef.h  TestCacheLine.cpp  TestCacheLine.h  TestIdGen.cpp  TestIdGen.h  TestScope.cpp  TestScope.h  TestString.cpp  TestString.h  TestStrongId.cpp  TestStrongId.h  TestThreadLocal.cpp  TestThreadLocal.h  TestThreadLocalThread.cpp  Thread.cpp  main.cpp  main.h
